<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:rowCount="10"
    tools:context=".GoodsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/underline_box"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="3">

        <Button
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/invisibleBackGround"
            android:fontFamily="sans-serif"
            android:scaleType="fitCenter"
            android:text="@string/app_top"
            android:textColor="@color/fontColor"
            android:textSize="30sp" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="상품 목록"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="30dp"
        android:layout_columnSpan="3"/>

    <LinearLayout
        android:id="@+id/item1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/book1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book1Price" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/book2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book2Price" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/book3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book3Price" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item4"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/book4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book4Price" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/book5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book5Price" />
    </LinearLayout>
    <Button
        android:id="@+id/registerIDFromGoods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="회원정보" />

</GridLayout>