<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/underline_box">

        <Button
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/invisibleBackGround"
            android:fontFamily="sans-serif"
            android:scaleType="fitCenter"
            android:text="@string/app_top"
            android:textColor="@color/fontColor"
            android:textSize="30sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">
            <EditText
                android:id="@+id/typeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="95"
                android:hint="@string/member_ID"
                android:inputType="text"
                android:maxEms="16"
                android:minHeight="48dp" />
            <Button
                android:id="@+id/checkValid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="확인" />
        </LinearLayout>
        <EditText
            android:id="@+id/typePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/member_password"
            android:inputType="textPassword"
            android:maxEms="16"
            android:minHeight="48dp"
            android:minEms="8" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxEms="16"
            android:minEms="8"
            android:minHeight="48dp"
            />

        <EditText
            android:id="@+id/typeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/typePhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/typeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text"
            android:minHeight="48dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/acception"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textSize="15sp"/>

        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/decline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:text="Decline"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:text="Accept"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/registerID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/signIn" />

            <Button
                android:id="@+id/quitRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/quit" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>